2011-09-27 Harri Pitkänen <hatapitk@iki.fi>
	* Suggest adding ' for "showssa" -> "show'ssa"

2011-09-27 Flammie Pirinen <flammie@iki.fi>
	* Zhfst version of HFST spellers

2011-09-23 Harri Pitkänen <hatapitk@iki.fi>
	* Do not apply analysis method for null terminated strings for a string that
	  does not have a null terminator.
	* Increase version numbers to 3.3.1.

2011-09-04 Harri Pitkänen <hatapitk@iki.fi>
	* Do not try to fix capitalization of baseforms when there
	  is obvious misalignment between baseform and structure pattern.

2011-09-02 Harri Pitkänen <hatapitk@iki.fi>
	* Pkg-config is now required for build configuration
	* Remove workaround for Lttoolbox bug. Apertium SVN revision 33803 or later
	  of Lttoolbox is now needed for the backend to work properly.

2011-08-17 Harri Pitkänen <hatapitk@iki.fi>
	* Fix tokenizer bug.

2011-07-06 Harri Pitkänen <hatapitk@iki.fi>
	* Fix hyphenation pattern for words starting with hyphen.

2011-07-05 Harri Pitkänen <hatapitk@iki.fi>
	* Fix hyphenation pattern for unknown words ending with hyphen.
	* Fix Python interface to work with Python 3.2.

2011-06-20 Harri Pitkänen <hatapitk@iki.fi>
	* Grammar checker: suggest replacing "yhdes" with "ensimmäinen"

2011-06-02 Harri Pitkänen <hatapitk@iki.fi>
	* Support COMPARISON in Malaga analyzer.

2011-05-19 Harri Pitkänen <hatapitk@iki.fi>
	* Handle embedded null input characters in Python and Java interfaces.

2011-05-07 Harri Pitkänen <hatapitk@iki.fi>
	* Support FOCUS in Malaga analyzer.

2011-05-05 Harri Pitkänen <hatapitk@iki.fi>
	* Support KYSYMYSLIITE in Malaga analyzer.

2011-04-16 Harri Pitkänen <hatapitk@iki.fi>
	* Support possessive suffixes in Malaga analyzer.

2011-03-31 Harri Pitkänen <hatapitk@iki.fi>
	* Support grammatical tense in Malaga analyzer.
	* Support participles in Malaga analyzer.
	* Increase version number to 3.3.

2011-03-19 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version number to 3.2.
	* Add Java files to source package.
