@@ -1,3 +1,6 @@
+2011-11-12 Harri Pitkänen <hatapitk@iki.fi>
+	* Add grammar check for misplaced conjunctions
+
 2011-09-27 Harri Pitkänen <hatapitk@iki.fi>
 	* Suggest adding ' for "showssa" -> "show'ssa"
 
